lib/flserial_port_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Automatycznie wygenerowane bindowania dla sterownika SerialPort C++
class FLSerialBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FLSerialBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FLSerialBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Inicjalizuje Dart Native API. Musi być wywołane przed
  /// jakąkolwiek próbą wysłania danych przez NativePort.
  int InitDartApiDL(ffi.Pointer<ffi.Void> data) {
    return _InitDartApiDL(data);
  }

  late final _InitDartApiDLPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
        'InitDartApiDL',
      );
  late final _InitDartApiDL =
      _InitDartApiDLPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// Tworzy nową instancję sterownika portu szeregowego.
  ffi.Pointer<SerialPort> serial_new() {
    return _serial_new();
  }

  late final _serial_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SerialPort> Function()>>(
        'serial_new',
      );
  late final _serial_new = _serial_newPtr
      .asFunction<ffi.Pointer<SerialPort> Function()>();

  /// Zwalnia pamięć i zamyka port.
  void serial_free(ffi.Pointer<SerialPort> sp) {
    return _serial_free(sp);
  }

  late final _serial_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<SerialPort>)>>(
        'serial_free',
      );
  late final _serial_free = _serial_freePtr
      .asFunction<void Function(ffi.Pointer<SerialPort>)>();

  /// Rejestruje ID portu Darta, do którego C++ będzie wysyłać dane i zdarzenia.
  void register_port(ffi.Pointer<SerialPort> sp, int port_id) {
    return _register_port(sp, port_id);
  }

  late final _register_portPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<SerialPort>, ffi.Int64)
        >
      >('register_port');
  late final _register_port = _register_portPtr
      .asFunction<void Function(ffi.Pointer<SerialPort>, int)>();

  /// Otwiera port z zaawansowaną konfiguracją.
  /// parity: 0=none, 1=odd, 2=even
  /// stopBits: 1 lub 2
  bool serial_open_ext(
    ffi.Pointer<SerialPort> sp,
    ffi.Pointer<ffi.Char> path,
    int baud,
    int dataBits,
    int stopBits,
    int parity,
  ) {
    return _serial_open_ext(sp, path, baud, dataBits, stopBits, parity);
  }

  late final _serial_open_extPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Pointer<SerialPort>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('serial_open_ext');
  late final _serial_open_ext = _serial_open_extPtr
      .asFunction<
        bool Function(
          ffi.Pointer<SerialPort>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
          int,
        )
      >();

  /// Zamyka fizyczne połączenie z portem.
  void serial_close(ffi.Pointer<SerialPort> sp) {
    return _serial_close(sp);
  }

  late final _serial_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<SerialPort>)>>(
        'serial_close',
      );
  late final _serial_close = _serial_closePtr
      .asFunction<void Function(ffi.Pointer<SerialPort>)>();

  /// Wysyła surowe bajty do portu.
  void serial_write(
    ffi.Pointer<SerialPort> sp,
    ffi.Pointer<ffi.Uint8> data,
    int length,
  ) {
    return _serial_write(sp, data, length);
  }

  late final _serial_writePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<SerialPort>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('serial_write');
  late final _serial_write = _serial_writePtr
      .asFunction<
        void Function(ffi.Pointer<SerialPort>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Ustawia stan linii DTR (Data Terminal Ready).
  void serial_set_dtr(ffi.Pointer<SerialPort> sp, int active) {
    return _serial_set_dtr(sp, active);
  }

  late final _serial_set_dtrPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<SerialPort>, ffi.Int)>
      >('serial_set_dtr');
  late final _serial_set_dtr = _serial_set_dtrPtr
      .asFunction<void Function(ffi.Pointer<SerialPort>, int)>();

  /// Ustawia stan linii RTS (Request To Send).
  void serial_set_rts(ffi.Pointer<SerialPort> sp, int active) {
    return _serial_set_rts(sp, active);
  }

  late final _serial_set_rtsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<SerialPort>, ffi.Int)>
      >('serial_set_rts');
  late final _serial_set_rts = _serial_set_rtsPtr
      .asFunction<void Function(ffi.Pointer<SerialPort>, int)>();

  /// Pobiera stan linii wejściowych jako maskę bitową:
  /// Bit 0: CTS, Bit 1: DSR, Bit 2: RI, Bit 3: DCD
  int serial_get_modem_status(ffi.Pointer<SerialPort> sp) {
    return _serial_get_modem_status(sp);
  }

  late final _serial_get_modem_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<SerialPort>)>>(
        'serial_get_modem_status',
      );
  late final _serial_get_modem_status = _serial_get_modem_statusPtr
      .asFunction<int Function(ffi.Pointer<SerialPort>)>();
}

typedef int_least8_t = ffi.Int8;
typedef Dartint_least8_t = int;
typedef int_least16_t = ffi.Int16;
typedef Dartint_least16_t = int;
typedef int_least32_t = ffi.Int32;
typedef Dartint_least32_t = int;
typedef int_least64_t = ffi.Int64;
typedef Dartint_least64_t = int;
typedef uint_least8_t = ffi.Uint8;
typedef Dartuint_least8_t = int;
typedef uint_least16_t = ffi.Uint16;
typedef Dartuint_least16_t = int;
typedef uint_least32_t = ffi.Uint32;
typedef Dartuint_least32_t = int;
typedef uint_least64_t = ffi.Uint64;
typedef Dartuint_least64_t = int;
typedef int_fast8_t = ffi.Int8;
typedef Dartint_fast8_t = int;
typedef int_fast16_t = ffi.Int16;
typedef Dartint_fast16_t = int;
typedef int_fast32_t = ffi.Int32;
typedef Dartint_fast32_t = int;
typedef int_fast64_t = ffi.Int64;
typedef Dartint_fast64_t = int;
typedef uint_fast8_t = ffi.Uint8;
typedef Dartuint_fast8_t = int;
typedef uint_fast16_t = ffi.Uint16;
typedef Dartuint_fast16_t = int;
typedef uint_fast32_t = ffi.Uint32;
typedef Dartuint_fast32_t = int;
typedef uint_fast64_t = ffi.Uint64;
typedef Dartuint_fast64_t = int;
typedef __int8_t = ffi.SignedChar;
typedef Dart__int8_t = int;
typedef __uint8_t = ffi.UnsignedChar;
typedef Dart__uint8_t = int;
typedef __int16_t = ffi.Short;
typedef Dart__int16_t = int;
typedef __uint16_t = ffi.UnsignedShort;
typedef Dart__uint16_t = int;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;
typedef __int64_t = ffi.LongLong;
typedef Dart__int64_t = int;
typedef __uint64_t = ffi.UnsignedLongLong;
typedef Dart__uint64_t = int;
typedef __darwin_intptr_t = ffi.Long;
typedef Dart__darwin_intptr_t = int;
typedef __darwin_natural_t = ffi.UnsignedInt;
typedef Dart__darwin_natural_t = int;
typedef __darwin_ct_rune_t = ffi.Int;
typedef Dart__darwin_ct_rune_t = int;

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

typedef __darwin_mbstate_t = __mbstate_t;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;
typedef __darwin_size_t = ffi.UnsignedLong;
typedef Dart__darwin_size_t = int;
typedef __builtin_va_list = ffi.Pointer<ffi.Char>;
typedef __darwin_va_list = __builtin_va_list;
typedef __darwin_wchar_t = ffi.Int;
typedef Dart__darwin_wchar_t = int;
typedef __darwin_rune_t = __darwin_wchar_t;
typedef __darwin_wint_t = ffi.Int;
typedef Dart__darwin_wint_t = int;
typedef __darwin_clock_t = ffi.UnsignedLong;
typedef Dart__darwin_clock_t = int;
typedef __darwin_socklen_t = __uint32_t;
typedef __darwin_ssize_t = ffi.Long;
typedef Dart__darwin_ssize_t = int;
typedef __darwin_time_t = ffi.Long;
typedef Dart__darwin_time_t = int;
typedef __darwin_blkcnt_t = __int64_t;
typedef __darwin_blksize_t = __int32_t;
typedef __darwin_dev_t = __int32_t;
typedef __darwin_fsblkcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsblkcnt_t = int;
typedef __darwin_fsfilcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsfilcnt_t = int;
typedef __darwin_gid_t = __uint32_t;
typedef __darwin_id_t = __uint32_t;
typedef __darwin_ino64_t = __uint64_t;
typedef __darwin_ino_t = __darwin_ino64_t;
typedef __darwin_mach_port_name_t = __darwin_natural_t;
typedef __darwin_mach_port_t = __darwin_mach_port_name_t;
typedef __darwin_mode_t = __uint16_t;
typedef __darwin_off_t = __int64_t;
typedef __darwin_pid_t = __int32_t;
typedef __darwin_sigset_t = __uint32_t;
typedef __darwin_suseconds_t = __int32_t;
typedef __darwin_uid_t = __uint32_t;
typedef __darwin_useconds_t = __uint32_t;

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>
  >
  __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

typedef __darwin_pthread_attr_t = _opaque_pthread_attr_t;
typedef __darwin_pthread_cond_t = _opaque_pthread_cond_t;
typedef __darwin_pthread_condattr_t = _opaque_pthread_condattr_t;
typedef __darwin_pthread_key_t = ffi.UnsignedLong;
typedef Dart__darwin_pthread_key_t = int;
typedef __darwin_pthread_mutex_t = _opaque_pthread_mutex_t;
typedef __darwin_pthread_mutexattr_t = _opaque_pthread_mutexattr_t;
typedef __darwin_pthread_once_t = _opaque_pthread_once_t;
typedef __darwin_pthread_rwlock_t = _opaque_pthread_rwlock_t;
typedef __darwin_pthread_rwlockattr_t = _opaque_pthread_rwlockattr_t;
typedef __darwin_pthread_t = ffi.Pointer<_opaque_pthread_t>;
typedef intmax_t = ffi.Long;
typedef Dartintmax_t = int;
typedef uintmax_t = ffi.UnsignedLong;
typedef Dartuintmax_t = int;

final class SerialPort extends ffi.Opaque {}

const int __WORDSIZE = 64;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;
